# rusty-commander

./: .dockerignore  .gitignore  .mise.toml  .prettierignore  .prettierrc  .stylelintrc.json  AGENTS.md  CONTRIBUTING.md  README.md  eslint.config.js  knip.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  vite.config.js  vitest.config.ts
.github/workflows/: ci.yml  slow-checks.yml
apps/desktop/: .prettierignore  knip.json  package.json
apps/desktop/src-tauri/: Cargo.toml  deny.toml
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src-tauri/src/commands/: licensing.rs  mod.rs
apps/desktop/src-tauri/src/licensing/: mod.rs  trial.rs  verification.rs
apps/license-server/: .gitignore  LICENSE  README.md  eslint.config.js  package.json  tsconfig.json  wrangler.toml
apps/website/: Dockerfile  README.md  astro.config.mjs  docker-compose.yml  eslint.config.js  lighthouserc.cjs  package-lock.json  package.json  playwright.config.ts
docs/: security.md  specification.md  style-guide.md  todo.md
docs/adr/: 001-use-go-for-check-script.md  002-use-cargo-nextest.md  003-disable-cargo-deny-advisories.md  004-auto-fix-locally-check-in-ci.md  005-scoped-css-for-file-explorer.md  006-file-metadata-scope.md  007-json-for-ipc.md  008-icon-registry-pattern.md  010-migrate-to-bincode2.md  011-netfs-mount-url-async.md  012-custom-auth-ui-keychain.md  013-smb-rs-share-listing.md  014-payment-provider-paddle.md  015-license-model-agpl-trial.md
docs/features/: back-forward-navigation.md  disk-access.md  file-loading.md  licensing.md  persistence-stores.md  shortcuts.md  sorting.md
docs/notes/: 2025-12-28-dir-load-bench-findings.md  2025-12-29-make-files-load-super-fast-tasks.md  2025-12-30-move-file-cache-to-backend-plan.md  2025-12-31-volume-fs-abstraction-plan.md  2025-12-31-volume-fs-abstraction-tasks.md  2026-01-01-debugging-startup-time.md  add-virtual-scrolling-spec.md  add-virtual-scrolling-tasks.md  license-activation-spec.md
docs/testing/: index.md  setting-up-smb-test-containers-on-linux.md  smb-servers.md
docs/tooling/: css-health-checks.md
docs/workflows/: add-npm-dependency.md  add-rust-dependency.md  benchmarking-file-loading.md  deploy-website.md  documenting-key-tech-decisions.md  generating-test-files.md  making-key-tech-decisions.md  update-dependencies.md
e2e/: smoke.test.ts
scripts/: tauri-wrapper.js
src/: app.css  app.html
src-tauri/: Cargo.toml  clippy.toml  deny.toml  rustfmt.toml  tauri.conf.json  tauri.dev.json
src-tauri/.cargo/: audit.toml
src-tauri/.config/: nextest.toml
src-tauri/capabilities/: default.json
src-tauri/examples/: docker_smb_test.rs  smb_spike.rs
src-tauri/icons/: icon.icns
src-tauri/src/: benchmark.rs  config.rs  icons.rs  lib.rs  macos_icons.rs  menu.rs  permissions.rs  settings.rs
src-tauri/src/commands/: file_system.rs  mod.rs  network.rs  ui.rs  volumes.rs
src-tauri/src/file_system/: hidden_files_test.rs  integration_test.rs  mock_provider.rs  mock_provider_test.rs  mod.rs  operations.rs  operations_test.rs  provider.rs  real_provider.rs  sorting_test.rs  sync_status.rs  volume_manager.rs  watcher.rs  watcher_test.rs
src-tauri/src/file_system/volume/: in_memory.rs  in_memory_test.rs  local_posix.rs  local_posix_test.rs  mod.rs
src-tauri/src/network/: bonjour.rs  keychain.rs  known_shares.rs  mod.rs  mount.rs  smb_client.rs
src-tauri/src/volumes/: mod.rs  watcher.rs
(+116 files in other folders)
