[package]
name = "cmdr"
version = "0.1.0"
description = "A blazing fast, keyboard-driven, two-pane file manager built, Rust, Tauri, and ❤️"
authors = ["David Veszelovszki <veszelovszki@gmail.com>"]
edition = "2024"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant, but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cmdr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-mcp-bridge = "0.6"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "8"
dirs = "6"
uzers = "0.12.2"
file_icon_provider = "0.4.0"
image = "0.25.9"
base64 = "0.22.1"
rayon = "1.11.0"
uuid = { version = "1.19.0", features = ["v4"] }
tauri-plugin-clipboard-manager = "2"
notify-debouncer-full = "0.6.0"
bincode2 = "2"
tauri-plugin-drag = "2.1.0"
tauri-plugin-fs = "2.4.4"
alphanumeric-sort = "1.5"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
env_logger = "0.11.8"
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.1"
core-services = "1.0.0"
icns = "0.3.1"
plist = "1.8.0"
tokio = { version = "1.49.0", features = ["rt", "time"] }
log = "0.4.29"
urlencoding = "2.1.3"
objc2 = { version = "0.6", features = ["std"] }
objc2-foundation = { version = "0.3", features = [
    "NSURL", "NSString", "NSDictionary", "NSDate", "NSArray", "NSValue", "NSError",
    "NSFileManager", "NSNetServices", "NSRunLoop"
] }
smb = "0.11.1"
smb-rpc = "=0.11.1"
chrono = "0.4"
security-framework = "3.2"

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }
# For test-only cryptographic key generation (compatible with ed25519-dalek's rand_core 0.6)
rand_core = { version = "0.6", features = ["getrandom"] }

[[bench]]
name = "icon_benchmarks"
harness = false
